<resources>
    <string name="app_name">Sculptr</string>
    <string name="heading1">Sleep and Hydration</string>
    <string name="sleepInsight">Sleep Records</string>

    <string name="hello">Hello</string>
    <string name="btn">Add</string>
    <string name="btn1">Edit</string>
    <string name="btn2">Delete</string>
    <string name="btn3">Get satarted</string>
    <string name="btn4">register</string>
    <string name="btn5">login</string>
    <string name="btn6">forgot password</string>
    <string name="Heading2">How are you doing today?</string>
    <string name="Heading3">USER PROFILE</string>
    <string name="Heading4">ADD DETAILS</string>
    <string name="Heading5">EDIT DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--diary-->

    <string name="daily_view">DAILY VIEW</string>
    <string name="calories">CALORIES</string>
    <string name="progress">PROGRESS</string>
    <string name="go_back">GO BACK</string>
    <string name="fitness">FITNESS</string>
    <string name="weight_log">WEIGHT LOG</string>
    <string name="diary">DIARY</string>
    <string name="meals">MEALS</string>
    <string name="fitness_log">FITNESS LOG</string>
    <string name="total">TOTAL</string>
    <string name="exercise">EXERCISE</string>
    <string name="food">FOOD</string>

    <string name="insightSleep">Sleeping Log</string>
    <string name="Insights">Weekly Sleeping Variance </string>
    <string name="calorieHeading">Weekly Fluid Variance</string>
    <string name="insightMainPage">Insights</string>
    <string name="chartAverage">Lorem Ipsum</string>
    <string name="maxVal">Lorem Ipsum</string>
    <string name="weight_analysis">Weight Analysis</string>
    <string name="fluid_analysis">Fluid Analysis</string>
    <string name="sleep_analysis">Sleep Analysis</string>
    <string name="calorie_analysis">Calorie Analysis</string>
    <string name="fluid_intake_logs">Fluid Intake Logs</string>
    <string name="_24_03_2022_7_30h_n23_03_2022_6_20h">24/03/2022 7.30h ...\n23/03/2022 6.20h ...</string>
    <string name="fluid_intake_entry">Fluid Intake Entry</string>
    <string name="litres">Litres</string>
    <string name="millilitres">Millilitres</string>
    <string name="alter_your_fluid_intake">Alter your fluid intake</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!--  TODO: Remove or change this placeholder text  -->
    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="others">OTHERS</string>
    <string name="meal_log_form">MEAL LOG FORM</string>
    <string name="meal">MEAL</string>
    <string name="carbohydrates">CARBOHYDRATES</string>
    <string name="protein">PROTEIN</string>
    <string name="fats">FATS</string>
    <string name="vitamins">VITAMINS</string>
    <string name="minerals">MINERALS</string>
    <string name="dietary_fibre">DIETARY FIBRE</string>
    <string name="weight_log_form">WEIGHT LOG FORM</string>
    <string name="date">DATE</string>
    <string name="weight">WEIGHT</string>
    <string name="save">SAVE</string>
    <string name="change">CHANGE</string>
    <string name="meal_intake">MEAL INTAKE</string>
    <string name="proteins">PROTEINS</string>
    <string name="type">TYPE</string>
    <string name="exercise_log_form">EXERCISE LOG FORM</string>
    <string name="minutes">MINUTES</string>
    <string name="calories_burnt">CALORIES BURNT</string>
    <string name="workout_log">WORKOUT LOG</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="calories_remaining">CALORIES REMAINING</string>

    <string-array name="options">
        <item>Choose option...</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

</resources>