<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryExerciseInformation">

    <ImageView
        android:id="@+id/rightCurve"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_right_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/leftCurve"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_left_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exerInfoeader"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="serif"
        android:text="@string/workout_log"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rightCurve" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerInfoeader">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/exerciseView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/exercise"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exerciseInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_toRightOf="@+id/exerciseView"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minutesView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exerciseView"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/minutes"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minutesInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exerciseInfo"
                android:layout_marginStart="125dp"
                android:layout_toRightOf="@+id/minutesView"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calBurntView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minutesView"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/calories_burnt"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calBurntInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/minutesInfo"
                android:layout_marginStart="29dp"
                android:layout_toRightOf="@+id/calBurntView"
                android:fontFamily="@font/alata"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/calBurntInfo">

                <Button
                    android:id="@+id/btn_updateExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/alata"
                    android:padding="10dp"
                    android:text="@string/edit"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/btn_edit"
                    app:cornerRadius="100dp" />

                <Button
                    android:id="@+id/btn_deleteExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="34dp"
                    android:layout_toRightOf="@+id/btn_updateExercise"
                    android:fontFamily="@font/alata"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="@string/delete"
                    android:backgroundTint="@color/btn_edit"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="100dp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
    <Button
        android:id="@+id/btn_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/btn_goBackAndDiary"
        app:cornerRadius="100dp"
        android:fontFamily="@font/alata"
        android:padding="15dp"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!--bottom navigation bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FF5A5F"
        app:itemIconTint="@color/icon_color"
        app:itemRippleColor="@color/white"
        app:itemTextColor="#F3F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_goback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_items" />

</androidx.constraintlayout.widget.ConstraintLayout>